aya: Implement RingBuf
This implements the userspace binding for RingBuf.

Instead of streaming the samples as heap buffers, the process_ring
function takes a callback to which we pass the event's byte region,
roughly following [libbpf]'s API design. This avoids a copy and allows
marking the consumer pointer in a timely manner.

[libbpf]: https://github.com/libbpf/libbpf/blob/master/src/ringbuf.c

Additionally, integration tests are added to demonstrate the usage
of the new APIs and to ensure that they work end-to-end.

Co-authored-by: William Findlay <william@williamfindlay.com>
Co-authored-by: Tatsuyuki Ishi <ishitatsuyuki@gmail.com>

--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -10,13 +10,21 @@ assert_matches = { workspace = true }
 aya = { workspace = true }
 aya-log = { workspace = true }
 aya-obj = { workspace = true }
+epoll = { workspace = true, default-features = true }
+futures = { workspace = true, default-features = true }
 libc = { workspace = true }
-log = { workspace = true }
+log = { workspace = true, default-features = true }
 netns-rs = { workspace = true }
-object = { workspace = true }
+object = { workspace = true, default-features = false, features = [
+    "elf",
+    "read_core",
+    "std",
+] }
+rand = { workspace = true, default-features = true }
 rbpf = { workspace = true }
 tokio = { workspace = true, default-features = false, features = [
     "macros",
+    "rt-multi-thread",
     "time",
 ] }
 
