--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -9,18 +9,22 @@ anyhow = "1"
 aya = { path = "../../aya" }
 aya-log = { path = "../../aya-log" }
 aya-obj = { path = "../../aya-obj" }
+epoll = "4.3.3"
+futures = "0.3.28"
 libc = { version = "0.2.105" }
 log = "0.4"
-matches = "0.1.8"
+matches = "0.1.10"
 object = { version = "0.31", default-features = false, features = [
     "elf",
     "read_core",
     "std",
 ] }
+rand = { version = "0.8.5" }
 rbpf = "0.2.0"
 tokio = { version = "1.24", default-features = false, features = [
     "macros",
     "time",
+    "rt-multi-thread",
 ] }
 
 [build-dependencies]
