--- a/bpf/aya-bpf/Cargo.toml
+++ b/bpf/aya-bpf/Cargo.toml
@@ -8,6 +8,11 @@ edition = "2021"
 aya-bpf-cty = { path = "../aya-bpf-cty" }
 aya-bpf-macros = { path = "../../aya-bpf-macros" }
 aya-bpf-bindings = { path = "../aya-bpf-bindings" }
+const-assert = { version = "1.0.1", optional = true }
 
 [build-dependencies]
 rustversion = "1.0"
+
+[features]
+default = []
+const_assert = ["const-assert"]
