--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -11,11 +11,15 @@ aya-log = { path = "../../aya-log" }
 aya-obj = { path = "../../aya-obj" }
 libc = { version = "0.2.105" }
 log = "0.4"
-object = { version = "0.31", default-features = false, features = ["std", "read_core", "elf"] }
+object = { version = "0.31", default-features = false, features = [
+    "std",
+    "read_core",
+    "elf",
+] }
 procfs = "0.15.1"
 rbpf = "0.2.0"
 tempfile = "3.3.0"
-tokio = { version = "1.24", features = ["rt", "rt-multi-thread", "sync", "time"] }
+tokio = { version = "1.24", default-features = false, features = ["time"] }
 
 [build-dependencies]
 cargo_metadata = "0.15.4"
