vscode: check all targets
Now that building integration tests works out of the box, we can.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "rust-analyzer.checkOnSave.allTargets": false,
-  "rust-analyzer.checkOnSave.command": "clippy"
+    "rust-analyzer.check.allTargets": true,
+    "rust-analyzer.check.command": "clippy"
 }
