--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -32,6 +32,7 @@ tokio = { version = "1.24.0", features = [
     "rt-multi-thread",
     "net",
 ], optional = true }
+flate2 = "1.0"
 
 [dev-dependencies]
 futures = { version = "0.3.12", default-features = false, features = ["std"] }
