--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -13,12 +13,15 @@ libc = { version = "0.2.105" }
 log = "0.4"
 matches = "0.1.8"
 object = { version = "0.31", default-features = false, features = [
-    "std",
-    "read_core",
     "elf",
+    "read_core",
+    "std",
 ] }
 rbpf = "0.2.0"
-tokio = { version = "1.24", default-features = false, features = ["time"] }
+tokio = { version = "1.24", default-features = false, features = [
+    "macros",
+    "time",
+] }
 
 [build-dependencies]
 cargo_metadata = "0.15.4"
