--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -29,8 +29,8 @@ thiserror = "1"
 tokio = { version = "1.24.0", features = ["rt"], optional = true }
 
 [dev-dependencies]
+assert_matches = "1.5.0"
 futures = { version = "0.3.12", default-features = false, features = ["std"] }
-matches = "0.1.8"
 tempfile = "3"
 
 [features]
