--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -6,12 +6,12 @@ publish = false
 
 [dependencies]
 anyhow = "1"
+assert_matches = "1.5.0"
 aya = { path = "../../aya" }
 aya-log = { path = "../../aya-log" }
 aya-obj = { path = "../../aya-obj" }
 libc = { version = "0.2.105" }
 log = "0.4"
-matches = "0.1.8"
 object = { version = "0.31", default-features = false, features = [
     "elf",
     "read_core",
