--- a/aya-log-common/Cargo.toml
+++ b/aya-log-common/Cargo.toml
@@ -2,7 +2,7 @@
 name = "aya-log-common"
 version = "0.1.13"
 description = "A logging library for eBPF programs."
-keywords = ["ebpf", "bpf", "log", "logging"]
+keywords = ["bpf", "ebpf", "log", "logging"]
 license = "MIT OR Apache-2.0"
 authors = ["The Aya Contributors"]
 repository = "https://github.com/aya-rs/aya-log"
