--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -24,4 +24,5 @@ tokio = { version = "1.24", default-features = false, features = [
 ] }
 
 [build-dependencies]
-cargo_metadata = "0.15.4"
+cargo_metadata = { version = "0.15.4", default-features = false }
+which = { version = "4.4.0", default-features = false }
