--- a/.github/workflows/gen.yml
+++ b/.github/workflows/gen.yml
@@ -8,6 +8,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+        with:
+          repository: libbpf/libbpf
+          path: libbpf
 
       - name: libbpf-version
         working-directory: libbpf
