--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -18,8 +18,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
-          submodules: recursive
+          repository: libbpf/libbpf
+          path: libbpf
 
       - name: Install Pre-requisites
         run: |
