--- a/aya-log-ebpf-macros/Cargo.toml
+++ b/aya-log-ebpf-macros/Cargo.toml
@@ -4,11 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-aya-log-common = { path = "../aya-log-common" }
-aya-log-parser = { path = "../aya-log-parser" }
-proc-macro2 = "1.0"
-quote = "1.0"
-syn = "2.0"
+aya-log-common = { workspace = true }
+aya-log-parser = { workspace = true }
+proc-macro2 = { workspace = true }
+quote = { workspace = true }
+syn = { workspace = true }
 
 [lib]
 proc-macro = true
