--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -11,26 +11,26 @@ documentation = "https://docs.rs/aya"
 edition = "2021"
 
 [dependencies]
-async-io = { version = "1.3", optional = true }
-aya-obj = { path = "../aya-obj", version = "0.1.0", features = ["std"] }
-bitflags = "2.2.1"
-bytes = "1"
-lazy_static = "1"
-libc = { version = "0.2.105" }
-log = "0.4"
-object = { version = "0.31", default-features = false, features = [
+async-io = { workspace = true, optional = true }
+aya-obj = { workspace = true, features = ["std"] }
+bitflags = { workspace = true }
+bytes = { workspace = true }
+lazy_static = { workspace = true }
+libc = { workspace = true }
+log = { workspace = true }
+object = { workspace = true, default-features = false, features = [
     "elf",
     "read_core",
     "std",
 ] }
-parking_lot = { version = "0.12.0", features = ["send_guard"] }
-thiserror = "1"
-tokio = { version = "1.24.0", features = ["rt"], optional = true }
+parking_lot = { workspace = true }
+thiserror = { workspace = true }
+tokio = { workspace = true, features = ["rt"], optional = true }
 
 [dev-dependencies]
-assert_matches = "1.5.0"
-futures = { version = "0.3.12", default-features = false, features = ["std"] }
-tempfile = "3"
+assert_matches = { workspace = true }
+futures = { workspace = true }
+tempfile = { workspace = true }
 
 [features]
 default = []
