--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -6,23 +6,19 @@ publish = false
 
 [dependencies]
 anyhow = "1"
-assert_matches = "1.5.0"
-aya = { path = "../../aya" }
-aya-log = { path = "../../aya-log" }
-aya-obj = { path = "../../aya-obj" }
-libc = { version = "0.2.105" }
-log = "0.4"
-object = { version = "0.31", default-features = false, features = [
-    "elf",
-    "read_core",
-    "std",
-] }
-rbpf = "0.2.0"
-tokio = { version = "1.24", default-features = false, features = [
+assert_matches = { workspace = true }
+aya = { workspace = true }
+aya-log = { workspace = true }
+aya-obj = { workspace = true }
+libc = { workspace = true }
+log = { workspace = true }
+object = { workspace = true }
+rbpf = { workspace = true }
+tokio = { workspace = true, default-features = false, features = [
     "macros",
     "time",
 ] }
 
 [build-dependencies]
-cargo_metadata = { version = "0.15.4", default-features = false }
-which = { version = "4.4.0", default-features = false }
+cargo_metadata = { workspace = true }
+which = { workspace = true }
