--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -5,26 +5,22 @@ edition = "2021"
 publish = false
 
 [dependencies]
-anyhow = "1"
-assert_matches = "1.5.0"
-aya = { path = "../../aya" }
-aya-log = { path = "../../aya-log" }
-aya-obj = { path = "../../aya-obj" }
-libc = { version = "0.2.105" }
-log = "0.4"
-object = { version = "0.31", default-features = false, features = [
-    "elf",
-    "read_core",
-    "std",
-] }
-rbpf = "0.2.0"
-tokio = { version = "1.24", default-features = false, features = [
+anyhow = { workspace = true, default-features = true }
+assert_matches = { workspace = true }
+aya = { workspace = true }
+aya-log = { workspace = true }
+aya-obj = { workspace = true }
+libc = { workspace = true }
+log = { workspace = true }
+object = { workspace = true }
+rbpf = { workspace = true }
+tokio = { workspace = true, default-features = false, features = [
     "macros",
     "time",
 ] }
 
 [build-dependencies]
-cargo_metadata = { version = "0.15.4", default-features = false }
+cargo_metadata = { workspace = true }
 # TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
 # it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
 # script to build this, but we want to teach cargo about the dependecy so that cache invalidation
@@ -38,4 +34,4 @@ cargo_metadata = { version = "0.15.4", default-features = false }
 # workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
 # features.
 integration-ebpf = { path = "../integration-ebpf" }
-xtask = { path = "../../xtask" }
+xtask = { workspace = true }
