--- a/test/integration-ebpf/Cargo.toml
+++ b/test/integration-ebpf/Cargo.toml
@@ -8,6 +8,9 @@ publish = false
 aya-bpf = { path = "../../bpf/aya-bpf" }
 aya-log-ebpf = { path = "../../bpf/aya-log-ebpf" }
 
+[build-dependencies]
+bpf-linker = { git = "https://github.com/aya-rs/bpf-linker.git", artifact = "bin" }
+
 [[bin]]
 name = "log"
 path = "src/log.rs"
