--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,8 @@ bytes = { version = "1", default-features = false }
 cargo_metadata = { version = "0.17.0", default-features = false }
 clap = { version = "4", default-features = false }
 core-error = { version = "0.0.0", default-features = false }
+dialoguer = { version = "0.10", default-features = false }
+diff = { version = "0.1.13", default-features = false }
 env_logger = { version = "0.10", default-features = false }
 futures = { version = "0.3.12", default-features = false }
 hashbrown = { version = "0.14", default-features = false }
@@ -73,8 +75,11 @@ num_enum = { version = "0.6", default-features = false }
 object = { version = "0.31", default-features = false }
 parking_lot = { version = "0.12.0", default-features = false }
 proc-macro2 = { version = "1", default-features = false }
+public-api = { version = "0.31.2", default-features = false }
 quote = { version = "1", default-features = false }
 rbpf = { version = "0.2.0", default-features = false }
+rustdoc-json = { version = "0.8.6", default-features = false }
+rustup-toolchain = { version = "0.1.5", default-features = false }
 syn = { version = "2", default-features = false }
 tempfile = { version = "3", default-features = false }
 testing_logger = { version = "0.1.1", default-features = false }
