aya: Add cargo-public-api
Adds cargo-public-api. This allows for public API changes to get caught
by cargo test, requiring new changes to be "blessed" by using:

   UPDATE_EXPECT=1 cargo test

When this file is changed, Alessandro will need to review the PR.

The change to aya/src/maps/mod.rs is due to public-api requiring
serde_json, which has cause the following type issue:

type annotations needed
multiple `impl`s satisfying `usize: std::cmp::PartialEq<_>`
  found in the following crates: `core`, `serde_json`:
- impl std::cmp::PartialEq for usize;
- impl std::cmp::PartialEq<serde_json::value::Value> for usize;

Signed-off-by: Dave Tucker <dave@dtucker.co.uk>

--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -29,7 +29,10 @@ tokio = { workspace = true, features = ["rt"], optional = true }
 
 [dev-dependencies]
 assert_matches = { workspace = true }
+cargo_metadata = { workspace = true }
 futures = { workspace = true }
+public-api = { workspace = true }
+rustdoc-json = { workspace = true }
 tempfile = { workspace = true }
 
 [features]
