aya: Add cargo-public-api
Adds cargo-public-api. This allows for public API changes to get caught
by cargo test, requiring new changes to be "blessed" by using:

   UPDATE_EXPECT=1 cargo test

When this file is changed, Alessandro will need to review the PR.

Signed-off-by: Dave Tucker <dave@dtucker.co.uk>

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -9,3 +9,6 @@ linker = "arm-linux-gnueabihf-gcc"
 
 [target.aarch64-unknown-linux-musl]
 linker = "aarch64-linux-musl-gcc"
+
+[env]
+CARGO_WORKSPACE_DIR = { value = "", relative = true }
